--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 
 
 
+
+
+
             <h3>Leave your contacts and we will call you back</h3>
             <div class="form-content">
                 <label class="form-label">
@@ -62,7 +65,18 @@
                     <br>
                     <textarea name="Comment"></textarea>
                 </label>
+                <label class="checkbox">
+                    <input type="checkbox">
+                </label>
             </div>
+
+
+
+
+
+
+
+
 
         </div>
     </div>
