--- a/index.html
+++ b/index.html
@@ -39,12 +39,29 @@
             </a>
             <h3 class="modal-title">Leave your contacts and we will call you back</h3>
             <div class="form-content">
+
+
+
+
+
+
                 <label class="form-label">
                     <h4 class="f-n">Name</h4>
-
-
-                    <input class="name-input" type="text" name="username" />
+                    <div class="name-input">
+                        <svg class="modal-svg">
+                            <use href="./icons/person-black.svg#person-black"></use>
+                        </svg> <input type="text" name="username" />
+                    </div>
                 </label>
+
+
+
+
+
+
+
+
+
                 <label class="form-label">
                     <h4 class="f-n"> Phone</h4>
 
