--- a/index.html
+++ b/index.html
@@ -40,41 +40,38 @@
             <h3 class="modal-title">Leave your contacts and we will call you back</h3>
             <div class="form-content">
 
-
-
-
-
-
-                <label class="form-label">
-                    <h4 class="f-n">Name</h4>
-                    <div class="name-input">
-                        <svg class="modal-svg">
-                            <use href="./icons/person-black.svg#person-black"></use>
-                        </svg> <input type="text" name="username" />
+                <div class="form-group">
+                    <label class="name" name">Name</label>
+                    <div class="input-icon">
+                        <svg class="name-icon">
+                            <use href="./icons/email-black.svg#email-black"></use>
+                        </svg>
+                        <input class="name-input" type="text" id="username" name="username" />
                     </div>
-                </label>
+                </div>
 
+                <div class="form-group">
+                    <label class="phone" for="phone">Phone</label>
+                    <div class="input-icon">
+                        <svg class="name-icon">
+                            <use href="./icons/email-black.svg#email-black"></use>
+                        </svg>
+                        <input class="name-input" type="text" id="phone" name="phone" />
+                    </div>
+                </div>
 
+                <div class="form-group">
+                    <label class="email" for="email">Email</label>
+                    <div class="input-icon">
+                        <svg class="name-icon">
+                            <use href="./icons/email-black.svg#email-black"></use>
+                        </svg>
+                        <input class="name-input" type="text" id="email" name="email" />
+                    </div>
+                </div>
 
-
-
-
-
-
-
-                <label class="form-label">
-                    <h4 class="f-n"> Phone</h4>
-
-                    <input class="phone-input" type="phone" name="Phone" />
-                </label>
-                <label class="form-label">
-                    <h4 class="f-n">Email</h4>
-
-                    <input class="email-input" type="email" name="email" />
-                </label>
                 <label class="textarea">
                     <h4 class="f-n">Comment</h4>
-
                     <textarea class="textarea-input" name="Comment" placeholder="Text input"></textarea>
                 </label>
             </div>
@@ -84,10 +81,11 @@
                         <use href="./icons/checkbox.svg#icon-Vector"></use>
                         <input class="input-checbox" type="checkbox" name="checkbox" checked>
                     </svg>
+
+                    <p class="text-checkbox"> I accept the terms and conditions of the <span class="input-span"> Privacy
+                            Policy </span>
+                    </p>
                 </div>
-                <p class="text-checkbox"> I accept the terms and conditions of the <span class="input-span"> Privacy
-                        Policy </span>
-                </p>
             </div>
             <button class="btn-send">Send</button>
         </div>
