--- a/index.html
+++ b/index.html
@@ -42,38 +42,33 @@
 
                 <div class="form-group">
                     <label class="name" name">Name</label>
-                    <div class="input-icon">
-                        <svg class="name-icon">
-                            <use href="./icons/email-black.svg#email-black"></use>
-                        </svg>
-                        <input class="name-input" type="text" id="username" name="username" />
-                    </div>
+
+                    <input class="name-input" type="text" id="username" name="username" />
+
                 </div>
 
                 <div class="form-group">
                     <label class="phone" for="phone">Phone</label>
-                    <div class="input-icon">
-                        <svg class="name-icon">
-                            <use href="./icons/email-black.svg#email-black"></use>
-                        </svg>
-                        <input class="name-input" type="text" id="phone" name="phone" />
-                    </div>
+
+
+                    <input class="name-input" type="text" id="phone" name="phone" />
+
                 </div>
 
                 <div class="form-group">
                     <label class="email" for="email">Email</label>
-                    <div class="input-icon">
-                        <svg class="name-icon">
-                            <use href="./icons/email-black.svg#email-black"></use>
-                        </svg>
-                        <input class="name-input" type="text" id="email" name="email" />
-                    </div>
-                </div>
 
-                <label class="textarea">
-                    <h4 class="f-n">Comment</h4>
-                    <textarea class="textarea-input" name="Comment" placeholder="Text input"></textarea>
-                </label>
+                    <svg class="name-icon">
+                        <use href="./icons/email-black.svg#email-black"></use>
+                    </svg>
+                    <input class="name-input" type="email" id="email" name="email" />
+
+                </div>
+                <div class="comment-area">
+                    <label class="comment">Comment</label>
+                    <textarea class="textarea" name="Comment" placeholder="Text input"></textarea>
+                    </label>
+                </div>
             </div>
             <div class="checkbox">
                 <div class="frame2">
@@ -82,7 +77,8 @@
                         <input class="input-checbox" type="checkbox" name="checkbox" checked>
                     </svg>
 
-                    <p class="text-checkbox"> I accept the terms and conditions of the <span class="input-span"> Privacy
+                    <p class="text-checkbox"> I accept the terms and conditions of the <span class="input-span">
+                            Privacy
                             Policy </span>
                     </p>
                 </div>
