--- a/index.html
+++ b/index.html
@@ -40,28 +40,33 @@
             <h3 class="modal-title">Leave your contacts and we will call you back</h3>
             <div class="form-content">
 
-                <div class="form-group">
+                <div class="inputwithicon">
                     <label class="name" name">Name</label>
-
+                    <svg class="svg-icon">
+                        <use href="./icons/person-black.svg#person-black"></use>
+                    </svg>
+                    <div class="vertical-line"></div>
                     <input class="name-input" type="text" id="username" name="username" />
 
                 </div>
 
-                <div class="form-group">
+                <div class="inputwithicon">
                     <label class="phone" for="phone">Phone</label>
-
+                    <svg class="svg-icon">
+                        <use href="./icons/phone-black.svg#phone-black"></use>
+                    </svg>
 
                     <input class="name-input" type="text" id="phone" name="phone" />
 
                 </div>
 
-                <div class="form-group">
+                <div class="inputwithicon">
                     <label class="email" for="email">Email</label>
 
-                    <svg class="name-icon">
+                    <svg class="svg-icon">
                         <use href="./icons/email-black.svg#email-black"></use>
                     </svg>
-                    <input class="name-input" type="email" id="email" name="email" />
+                    <input class="name-input" type="text" id="email" name="email" />
 
                 </div>
                 <div class="comment-area">
