input-uri modal
stilizare inputuri modal

--- a/portofoliu.html
+++ b/portofoliu.html
@@ -212,9 +212,16 @@
                     </a>
                 </div>
             </div>
-            <div class="e-mail-input">
-                <h3>Subscribe</h3>
-            </div>
+            <form>
+                <h3 class="group-title">Subscribe</h3>
+                <input class="email" type="email" name="email" id="user_email" placeholder="E-mail" />
+                <button class="subscribe-btn" type="submit">
+                    <p class="subscribe-txt">Subscribe</p>
+                    <svg class="icon-frame">
+                        <use href="./icons/Frame3.svg#icon-Frame"></use>
+                    </svg>
+                </button>
+            </form>
         </div>
     </div>
 </body>
