--- a/index.html
+++ b/index.html
@@ -39,35 +39,27 @@
             </a>
             <h3 class="modal-title">Leave your contacts and we will call you back</h3>
             <div class="form-content">
-
                 <div class="inputwithicon">
-                    <label class="name" name">Name</label>
+                    <label class="name">Name</label>
+                    <input class="input" type="text" name="username" />
                     <svg class="svg-icon">
                         <use href="./icons/person-black.svg#person-black"></use>
                     </svg>
                     <div class="vertical-line"></div>
-                    <input class="name-input" type="text" id="username" name="username" />
-
                 </div>
-
                 <div class="inputwithicon">
-                    <label class="phone" for="phone">Phone</label>
+                    <label class="phone">Phone</label>
                     <svg class="svg-icon">
-                        <use href="./icons/phone-black.svg#phone-black"></use>
+                        <use href="./icons/phone-black1.svg#phone-black1"></use>
                     </svg>
-
-                    <input class="name-input" type="text" id="phone" name="phone" />
-
+                    <input class="input" type="text" id="phone" name="phone" />
                 </div>
-
                 <div class="inputwithicon">
-                    <label class="email" for="email">Email</label>
-
+                    <label class="email">Email</label>
                     <svg class="svg-icon">
-                        <use href="./icons/email-black.svg#email-black"></use>
+                        <use href="./icons/email-black1.svg#email-black1"></use>
                     </svg>
-                    <input class="name-input" type="text" id="email" name="email" />
-
+                    <input class="input" type="text" id="email" name="email" />
                 </div>
                 <div class="comment-area">
                     <label class="comment">Comment</label>
@@ -81,7 +73,6 @@
                         <use href="./icons/checkbox.svg#icon-Vector"></use>
                         <input class="input-checbox" type="checkbox" name="checkbox" checked>
                     </svg>
-
                     <p class="text-checkbox"> I accept the terms and conditions of the <span class="input-span">
                             Privacy
                             Policy </span>
