--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="modal">
             <a class="close-btn" data-modal-close>
                 <svg class="svg">
-                    <use href="./icons/Ellipse 1.svg#Ellipse"></use>
+                    <use href="./icons/Ellipse-1.svg#close-btn"></use>
                 </svg>
             </a>
             <h3 class="modal-title">Leave your contacts and we will call you back</h3>
@@ -45,7 +45,7 @@
                     <svg class="svg-icon">
                         <use href="./icons/person-black.svg#person-black"></use>
                     </svg>
-                    <div class="vertical-line"></div>
+
                 </div>
                 <div class="inputwithicon">
                     <label class="phone">Phone</label>
