--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <div class="popover is-hidden" data-modal>
         <div class="modal">
             <a class="close-btn" data-modal-close>
-                <svg class="close-svg ">
-                    <use href="./icons/close-black-1.svg#close-btn"></use>
+                <svg class="close-svg">
+                    <use href="./icons/symbol-defs.svg#close-btn"></use>
                 </svg>
             </a>
             <h3 class="modal-title">Leave your contacts and we will call you back</h3>
